kubernetes_deploy/content-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-api
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
      - name: content-api
        image: ministryofjustice/cloud-platform-multi-container-demo-app:content-api-1.4
        ports:
        - containerPort: 4567
