kubernetes_deploy/rails-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
  labels:
    app: rails-app-service
spec:
  ports:
  - port: 3000
    name: metrics
    targetPort: 3000
  selector:
    app: rails-app
